deploy-disconnected-registry/manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeframe-registry
  labels:
    name: kubeframe-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      name: kubeframe-registry
  template:
    metadata:
      labels:
        name: kubeframe-registry
    spec:
      containers:
        - name: kubeframe-registry
          image: quay.io/jparrill/registry:2
          imagePullPolicy: always
          ports:
            - name: registry
              containerPort: 5000
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: "/var/lib/registry"
            - name: certs-secret
              mountPath: "/certs"
              readOnly: true
            - name: auth-secret
              mountPath: "/auth"
              readOnly: true
            - name: registry-conf
              mountPath: "/etc/docker/registry"
              readOnly: true
              subpath: config.yml
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-pvc
        - name: certs-secret
          secret:
            secretName: kubeframe-registry-tls
        - name: auth-secret
          secret:
            secretName: auth
        - name: registry-conf
          configMap:
            name: registry-conf
