deploy-disconnected-registry/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: ztpfw-registry
  name: ztpfw-registry
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: ztpfw-registry-tls
spec:
  selector:
    name: ztpfw-registry
  ports:
  - name: registry
    port: 443
    protocol: TCP
    targetPort: 5000
  sessionAffinity: None
  type: ClusterIP
