deploy-disconnected-registry/manifests/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    name: kubeframe-registry
  name: kubeframe-registry
spec:
  port:
    targetPort: registry
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    name: kubeframe-registry
